# PargonInput

./: CMakeLists.txt  README.md
Include/Pargon/: Input.Win32.h  Input.XInput.h  Input.h
Include/Pargon/Input/: ControllerDevice.h  ControllerInput.h  ControllerToMotionEmulator.h  KeyboardDevice.h  KeyboardInput.h  MotionDevice.h  MotionInput.h  MouseDevice.h  MouseInput.h  MouseToTouchEmulator.h  TouchDevice.h  TouchInput.h
Source/Core/: ControllerDevice.cpp  ControllerInput.cpp  ControllerToMotionEmulator.cpp  KeyboardDevice.cpp  MotionDevice.cpp  MouseDevice.cpp  MouseToTouchEmulator.cpp  TouchDevice.cpp
Source/Win32/: Win32KeyboardInput.cpp  Win32KeyboardInput.h  Win32MouseInput.cpp  Win32MouseInput.h
Source/XInput/: XInputControllerInput.cpp  XInputControllerInput.h
